Fix: Editor layout bug. Fix: Tag relevant thread layout.

--- a/discuzx2.0ML/upload/template/default/common/editor.css
+++ b/discuzx2.0ML/upload/template/default/common/editor.css
@@ -4,7 +4,7 @@ Editor CSS file for Discuz! X
 http://www.comsenz.com
 -- Modified by Valery Votintsev
 */
-/*vot*/ .edt { border: 1px solid; border-color: #999 #CCC #CCC #999; min-width: 830px; }
+.edt { border: 1px solid; border-color: #999 #CCC #CCC #999; }
 	.edt .bar { padding: 4px; height: 44px; border-bottom: 1px solid #DDD; background: {COMMONBG}; }
 		.edt .bbar { height: 20px; border-top: 1px solid #DDD; text-align: right; background: {COMMONBG}; }
 			.edt .bbar img { vertical-align: bottom; *margin-right: -4px; cursor: row-resize; }
